@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.400 2012/02/06 11:06:57 obache Exp $
+$NetBSD: CHANGES-2012,v 1.401 2012/02/06 12:32:38 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -589,3 +589,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated benchmarks/benchfft to 2.0nb4 [sbd 2012-02-06]
 	Updated textproc/py-X to 0.9nb3 [obache 2012-02-06]
 	Updated graphics/tiff to 4.0.0nb1 [wiz 2012-02-06]
+	Added devel/ruby-kgio version 2.7.2 [fhajny 2012-02-06]
+	Added www/ruby-raindrops version 0.8.0 [fhajny 2012-02-06]
+	Added www/ruby-unicorn version 4.2.0 [fhajny 2012-02-06]
